<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	
    
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search_white_24dp"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
    
    <!--item android:id="@+id/add_event"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_an_event"
        android:showAsAction="ifRoom" /-->

    <item android:id="@+id/importDB"
        android:title="@string/import_db"/>

    <item android:id="@+id/exportDB"
        android:title="@string/export_db"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"/>

    <item android:id="@+id/about"
        android:title="@string/about"/>
    
</menu>
